Implement sudoku solving with errors

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <td tabindex="0"></td>
       <td tabindex="0"></td>
       <td tabindex="0"></td>
+      <td tabindex="0">1</td>
       <td tabindex="0"></td>
+      <td tabindex="0">5</td>
       <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
+      <td tabindex="0">6</td>
+      <td tabindex="0">8</td>
     </tr>
     <tr>
       <td tabindex="0"></td>
@@ -33,14 +33,69 @@
       <td tabindex="0"></td>
       <td tabindex="0"></td>
       <td tabindex="0"></td>
+      <td tabindex="0">7</td>
+      <td tabindex="0"></td>
+      <td tabindex="0">1</td>
+    </tr>
+    <tr>
+      <td tabindex="0">9</td>
+      <td tabindex="0"></td>
+      <td tabindex="0">1</td>
       <td tabindex="0"></td>
       <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0">3</td>
       <td tabindex="0"></td>
     </tr>
     <tr>
       <td tabindex="0"></td>
       <td tabindex="0"></td>
+      <td tabindex="0">7</td>
       <td tabindex="0"></td>
+      <td tabindex="0">2</td>
+      <td tabindex="0">6</td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+    </tr>
+    <tr>
+      <td tabindex="0">5</td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0">3</td>
+    </tr>
+    <tr>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0">8</td>
+      <td tabindex="0">7</td>
+      <td tabindex="0"></td>
+      <td tabindex="0">4</td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+    </tr>
+    <tr>
+      <td tabindex="0"></td>
+      <td tabindex="0">3</td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0"></td>
+      <td tabindex="0">8</td>
+      <td tabindex="0"></td>
+      <td tabindex="0">5</td>
+    </tr>
+    <tr>
+      <td tabindex="0">1</td>
+      <td tabindex="0"></td>
+      <td tabindex="0">5</td>
       <td tabindex="0"></td>
       <td tabindex="0"></td>
       <td tabindex="0"></td>
@@ -49,67 +104,12 @@
       <td tabindex="0"></td>
     </tr>
     <tr>
+      <td tabindex="0">7</td>
+      <td tabindex="0">9</td>
       <td tabindex="0"></td>
+      <td tabindex="0">4</td>
       <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-    </tr>
-    <tr>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-    </tr>
-    <tr>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-    </tr>
-    <tr>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-    </tr>
-    <tr>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-    </tr>
-    <tr>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
-      <td tabindex="0"></td>
+      <td tabindex="0">1</td>
       <td tabindex="0"></td>
       <td tabindex="0"></td>
       <td tabindex="0"></td>
@@ -117,8 +117,8 @@
   </table>
   </div>
   <br>
-  <div id="solve">
-    <button type="button">Solve!</button>
+  <div id="options">
+    <button type="button" id="solve">Solve!</button>
     <button type="button">Clear board</button>
   </div>
   <script src="script.js"></script>
