--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <br>
   <div id="options">
     <button type="button" id="solve">Solve!</button>
-    <button type="button">Clear board</button>
+    <button type="button" id="clear">Clear board</button>
   </div>
   <script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prototype/1.7.3/prototype.js"></script>
