Tweak board navigation + add values counter

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
     <button type="button" id="solve">Solve!</button>
     <button type="button" id="clear">Clear board</button>
   </div>
+  <div id="messagearea">
+    <span id="message"></span>
+  </div>
   <script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prototype/1.7.3/prototype.js"></script>
 </body>
