--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" type="image/png" href="jasmine/lib/jasmine-3.4.0/jasmine_favicon.png">
+  <link rel="stylesheet" type="text/css" href="jasmine/lib/jasmine-3.4.0/jasmine.css">
 
 </head>
 <body>
@@ -126,5 +128,7 @@
   </div>
   <script src="script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prototype/1.7.3/prototype.js"></script>
+  <script type="text/javascript" src="jasmine/lib/jasmine-3.4.0/boot.js"></script>
+  
 </body>
 </html>
